--- a/index.html
+++ b/index.html
@@ -16,69 +16,45 @@
         </div>
         <nav>
             <h2>Brands we carry</h2>
-            <ul>
-                <li>brand</li>
-                <li>brand</li>
-                <li>brand</li>
-                <li>brand</li>
-            </ul>
+            <template id="categoryList">
+                
+                <ul id="headerList">
+                    <li>brand</li>
+                    <li>brand</li>
+                    <li>brand</li>
+                    <li>brand</li>
+                </ul>
+            </template>
         </nav>
     </header>
 
     <main>
         <article>
 
+            <template id="productCard">
+                <div class="product">
+                    <p class="type">Type</p>
+                    <p class="name">Name</p>
 
-            <div class="product">
-                <p class="type">Type</p>
-                <p class="name">Name</p>
+                    <div class="discription">
+                        <p class="price">Price</p>
+                        <p class="color">Colours</p>
+                        <p class="stock">In stock</p>
+                        <a class="button" href="http://##">Full Specs</a>
+                    </div>
 
-                <div class="discription">
-                    <p class="price">Price</p>
-                    <p class="color">Colours</p>
-                    <p class="stock">In stock</p>
-                   <a class="button" href="http://##">Full Specs</a>
+                    <img class="image" src="placeholder.png" alt="bike image">
                 </div>
-            
-                <img class="image" src="placeholder.png" alt="bike image">
-            </div>
 
-            <div class="product">
-                <p>Type</p>
-                <p>Name</p>
-                <p>Price</p>
-                <p>colours</p>
-                <p>in stock</p>
-                <button>Full Specs</button>
-                <img src="" alt="bike image">
-            </div>
-
-            <div class="product">
-                <p>Type</p>
-                <p>Name</p>
-                <p>Price</p>
-                <p>colours</p>
-                <p>in stock</p>
-                <button>Full Specs</button>
-                <img src="" alt="bike image">
-            </div>
-
-            <div class="product">
-                <p>Type</p>
-                <p>Name</p>
-                <p>Price</p>
-                <p>colours</p>
-                <p>in stock</p>
-                <button>Full Specs</button>
-                <img src="" alt="bike image">
-            </div>
+            </template>
 
         </article>
 
 
     </main>
     <footer></footer>
-    <script src="bike.js"></script>
+
 </body>
+<script src="bike.js"></script>
 
 </html>
